--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 notify = "5.0.0"
 notify-debouncer-mini = { version = "0.2.0" }
 ssh2 = "0.9.3"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5.9"
